fixed the overflow problem in hero slider button's

--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ overflow: hidden;
     font-size: 20px;
 
     transition: .3s;
+    overflow: hidden;
 
     display: flex;
     align-items: center;
